Added a date of birth picker

--- a/test1/public/index.html
+++ b/test1/public/index.html
@@ -5,7 +5,9 @@
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/bootstrap-datepicker3.css"/>
+
 </head>
 
 <body>
@@ -16,6 +18,12 @@
     <script src="js/angular.min.js"></script>
     <script src="js/angular-ui-router.min.js"></script>
 
+    <!-- included for date picker -->
+    <!-- Include jQuery -->
+    <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
+    <!-- Include Date Range Picker -->
+    <script type="text/javascript" src="js/bootstrap-datepicker.min.js"></script>
+    
     <!-- application scripts -->
     <script src="app.js"></script>
    
