Added download and upload

--- a/test1/public/index.html
+++ b/test1/public/index.html
@@ -37,6 +37,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ng-csv/0.3.6/ng-csv.min.js"></script>
     <script src="js/angular-sanitize.min.js"></script>
     <script src="js/csv_testCtrl.js"></script>
+    <script src="js/papaparse.min.js"></script>
+   
+
     
 </body>
 </html>
